@@ -6,7 +6,6 @@ import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class EmployeeMapper {
@@ -24,7 +23,7 @@ public class EmployeeMapper {
     public List<EmployeeDto> mapEmployeeListToDto(List<Employee> employees) {
         return employees.stream()
                 .map(this::mapToEmployeeDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Employee mapToEmployeeEntity(EmployeeDto employeeDto) {
